# preppers

./: .gitignore  Cargo.toml  LICENSE.md  README.md
.github/workflows/: CI.yml
examples/: annotate_fasta.rs  libpoc.rs
preppyrs/: pyproject.toml
preppyrs/src/: lib.rs
python/: Cargo.toml  pyproject.toml
python/src/: lib.rs
python/test/: test_preppers.py
python/tests/: test_preppers.py
src/: fasta.rs  io.rs  lib.rs  termini.rs
src/fasta/: mod.rs
src/io/: mod.rs
