[package]
name = "preppy"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "preppers"  # mane of the python module
crate-type = ["cdylib"]

[dependencies]
preppers = { version = "0.1.1", path = ".." }
pyo3 = "0.28.2"
