[package]
name = "preppy"
version = "0.2.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "preppers"  # mane of the python module
crate-type = ["cdylib"]

[dependencies]
fancy-regex = "0.17.0"
preppers = { version = "0.2.3", path = ".." }
pyo3 = "0.28.2"
